# model-service

./: .gitignore  Dockerfile  README.md  docker-compose.yml  fetch_model.html  index.html  model_class.html  pylintrc  pyproject.toml  requirements.txt  run.sh  serve_model.html  version.yaml
.github/workflows/: release.yaml  tag.yaml
src/: app.py  config.ini  fetch_model.py  main.py  model_class.py  serve_model.py
