[tool.poetry]
name = "model-service"
version = "0.1.0"
description = "Wrapper service for the released ML model"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flasgger = "0.9.7.1"
flask = "2.2.5"
joblib = ">=1.2.0,<1.3.0"
numpy = "1.26.4"
requests = ">=2.31.0,<2.32.0"
tensorflow = "2.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
